Fixed missing background image issue
Fixed link to  image source file to "codarko" (it had still the name of my devekopment stage which was different)

--- a/less/colors.less
+++ b/less/colors.less
@@ -482,7 +482,7 @@
 
 body {
     background-attachment: fixed !important;
-    background: #1a1d1f url(/board/sites/default/themes/cutebutevil/img/background.jpg) no-repeat center top;
+    background: #1a1d1f url(/board/sites/default/themes/codarko/img/background.jpg) no-repeat center top;
     background-size: 100%;
     font-weight: 560;
     line-height: 1.6;
@@ -490,7 +490,7 @@ body {
 
 .codo_topics .codo_topics_head {
     height: 100px;
-    background: #1a1d1f url(/board/sites/default/themes/cutebutevil/img/cbehead.jpg) no-repeat center top;
+    background: #1a1d1f url(/board/sites/default/themes/codarko/img/cbehead.jpg) no-repeat center top;
 }
 
 .codo_topics .codo_topics_body>div>article>.codo_topics_topic_foot {
